--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         <h2>Licença <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
-        <span>⁰¹├✙ Atestado ⌔ ᵃ</span>
+        <span>⁰¹├✙ Atestado ⌔ </span>
         <button class="copy-button" onclick="copyText('ᵃᵗᵉˢᵗᵃˢᵒ')">Copiar</button>
     </div>
     <div class="copy-group">
@@ -465,23 +465,23 @@
         <button class="copy-button" onclick="copyText('ˡᶜᵐᵈˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰³├✙ Visitante ⌔ ˢᵏᵘʳᵛⁱˢⁱᵗ</span>
+        <span>⁰³├✙ Visitante ⌔ </span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳᵛⁱˢⁱᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁴├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔ ᶠʳˢˢᵏ</span>
+        <span>⁰⁴├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 ⌔ </span>
         <button class="copy-button" onclick="copyText('ᶠʳˢˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁵├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔ ᶠʳˢᵛʳᵐ</span>
+        <span>⁰⁵├✙ 𝘍𝘦𝘳𝘪𝘢𝘴 𝘷𝘦𝘳𝘮𝘦𝘭𝘩𝘢 ⌔ </span>
         <button class="copy-button" onclick="copyText('ᶠʳˢᵛʳᵐ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁶├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦𝘥𝘪𝘤𝘢 ⌔ ⁱᶜˢᵐᵈ</span>
+        <span>⁰⁶├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 𝘮𝘦𝘥𝘪𝘤𝘢 ⌔ </span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢᵐᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁷├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔ ⁱᶜˢ</span>
+        <span>⁰⁷├✙ 𝘓𝘪𝘤𝘦𝘯𝘤𝘢 ⌔ </span>
         <button class="copy-button" onclick="copyText('ⁱᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
