--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         <button class="copy-button" onclick="copyText('ⁱᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁸├✙ Aposentado ⌔ ˢᵏᵘʳ²⁰¹⁹</span>
+        <span>⁰⁸├✙ Aposentado ⌔ </span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ²⁰¹⁹')">Copiar</button>
     </div>
 </div>
