--- a/index.html
+++ b/index.html
@@ -489,6 +489,66 @@
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ²⁰¹⁹')">Copiar</button>
     </div>
 </div>
+
+<div class="house-section">
+    <div class="house-title">
+        <i class="fas fa-home"></i>
+        <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+    </div>
+    <div class="copy-group">
+        <span>⁰¹├⍟ Habeas corpus ⌲ ʰᵇᶜˢᵏ</span>
+        <button class="copy-button" onclick="copyText('ʰᵇᶜˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰²├⍟ 𝘛𝘦𝘳𝘳𝘰𝘳𝘪𝘴𝘵𝘢 ⌲ ᵗʳˢᵏ</span>
+        <button class="copy-button" onclick="copyText('ᵗʳˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰³├⍟ 𝘋𝘦𝘵𝘦𝘯𝘵𝘰 ⌲ ᵈᵗᵗᵒ</span>
+        <button class="copy-button" onclick="copyText('ᵈᵗᵗᵒ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁴├⍟ 𝘈𝘧𝘢𝘴𝘵𝘢𝘮𝘦𝘯𝘵𝘰 indeterminado ⌲ ᵃᶠᵏⁱⁿ</span>
+        <button class="copy-button" onclick="copyText('ᵃᶠᵏⁱⁿ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁵├⍟ 𝘈𝘧𝘢𝘴𝘵𝘢𝘮𝘦𝘯𝘵𝘰 ⌲ ᵃᶠᵏ</span>
+        <button class="copy-button" onclick="copyText('ᵃᶠᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁶├⍟ 𝘋𝘦𝘵𝘦𝘯𝘵𝘰 𝘦𝘮 𝘭𝘪𝘣𝘦𝘳𝘥𝘢𝘥𝘦 ⌲ ᵈᵗᵗᵒˡᵇ</span>
+        <button class="copy-button" onclick="copyText('ᵈᵗᵗᵒˡᵇ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁷├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘈𝘭𝘵𝘢 ⌲ ᵖᵘⁿᵃˡᵗ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵘⁿᵃˡᵗ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁸├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘎𝘳𝘢𝘷𝘦 ⌲ ˢᵏᵖⁿᵍ</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵖⁿᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>⁰⁹├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘔𝘦𝘥𝘪𝘢 ⌲ ᵖᵐⁿᵈ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵐⁿᵈ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹⁰├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘱𝘢𝘵𝘰𝘭𝘰𝘨𝘪𝘤𝘢 ⌲ ˢᵏᵐᵍ</span>
+        <button class="copy-button" onclick="copyText('ˢᵏᵐᵍ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹¹├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘷𝘦𝘳𝘥𝘦 ⌲ ᵖᵘⁿⁱᵛ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵘⁿⁱᵛ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹²├⍟ 𝘗𝘶𝘯𝘪𝘤̧𝘢̃𝘰 𝘢𝘮𝘢𝘳𝘦𝘭𝘢 ⌲ ᵖᵘⁿⁱᵃ</span>
+        <button class="copy-button" onclick="copyText('ᵖᵘⁿⁱᵃ')">Copiar</button>
+    </div>
+    <div class="copy-group">
+        <span>¹³├⍟ 𝘔𝘢𝘳𝘤𝘢r 𝘥𝘦 𝘬𝘪𝘵𝘢𝘮𝘦𝘯𝘵𝘰 ⌲ ᵈᵉˢᵖᵉᵈⁱᵈᵒ ⁱⁿᶜᵒᵐᵖᵉᵗᵉⁿᵗᵉ°</span>
+        <button class="copy-button" onclick="copyText('ᵈᵉˢᵖᵉᵈⁱᵈᵒ ⁱⁿᶜᵒᵐᵖᵉᵗᵉⁿᵗᵉ°')">Copiar</button>
+    </div>
+</div>
+
     
     
     <!-- Seção Citadel -->
