--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
         <button class="copy-button" onclick="copyText('ʰᵇᶜˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰²├⍟ Terrorista ⌲ ᵗ</span>
+        <span>⁰²├⍟ Terrorista ⌲ </span>
         <button class="copy-button" onclick="copyText('ᵗʳˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
@@ -519,7 +519,7 @@
         <button class="copy-button" onclick="copyText('ᵈᵗᵗᵒˡᵇ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁷├⍟ Punição Alta ⌲ ᵗ</span>
+        <span>⁰⁷├⍟ Punição Alta ⌲ </span>
         <button class="copy-button" onclick="copyText('ᵖᵘⁿᵃˡᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
