--- a/index.html
+++ b/index.html
@@ -300,47 +300,47 @@
         <h2> Distrito federal <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
-        <span>├▢Ministro Do Estado ❍</span>
+        <span>⁰¹├▢Ministro Do Estado ❍</span>
         <button class="copy-button" onclick="copyText('ᵐⁿᵈᵘʳ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Vereador ❍</span>
+        <span>⁰²├▢Vereador ❍</span>
         <button class="copy-button" onclick="copyText('ᵛʳᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Sindicato ❍</span>
+        <span>⁰³├▢Sindicato ❍</span>
         <button class="copy-button" onclick="copyText('ˢᵈᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Repositor ❍</span>
+        <span>⁰⁴├▢Repositor ❍</span>
         <button class="copy-button" onclick="copyText('ʳᵖᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Upador ❍</span>
+        <span>⁰⁵├▢Upador ❍</span>
         <button class="copy-button" onclick="copyText('ᵘᵖᵈʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ❍</span>
+        <span>⁰⁶├▢𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ❍</span>
         <button class="copy-button" onclick="copyText('ˢᵍᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Vigia ❍</span>
+        <span>⁰⁷├▢Vigia ❍</span>
         <button class="copy-button" onclick="copyText('ᵛᵍᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢𝘈𝘨𝘦𝘯𝘵𝘦 ❍</span>
+        <span>⁰⁸├▢𝘈𝘨𝘦𝘯𝘵𝘦 ❍</span>
         <button class="copy-button" onclick="copyText('ᶜᵒᵈⁱⁿᵒᵐᵉ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢𝘐𝘯𝘴𝘵𝘳𝘶𝘵𝘰𝘳 ❍</span>
+        <span>⁰⁹├▢𝘐𝘯𝘴𝘵𝘳𝘶𝘵𝘰𝘳 ❍</span>
         <button class="copy-button" onclick="copyText('ⁱⁿˢᵗᵘʳ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Carrasco ❍</span>
+        <span>¹⁰├▢Carrasco ❍</span>
         <button class="copy-button" onclick="copyText('ᶜᵃᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├▢Animador ❍</span>
+        <span>¹²├▢Animador ❍</span>
         <button class="copy-button" onclick="copyText('ᵃⁿⁱᵐᵘʳˢ')">Copiar</button>
     </div>
 </div>
