--- a/index.html
+++ b/index.html
@@ -185,63 +185,63 @@
     </div>
 
     <div class="copy-group">
-        <span>├⌯Ceo Chefe Geral ⌬ </span>
+        <span>⁰¹├⌯Ceo Chefe Geral ⌬ </span>
         <button class="copy-button" onclick="copyText('ᶜᵉᵒᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Ceo Residente ⌬ </span>
+        <span>⁰²├⌯Ceo Residente ⌬ </span>
         <button class="copy-button" onclick="copyText('ᶜᵒᵒʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Ceo sk ⌬ </span>
+        <span>⁰³├⌯Ceo sk ⌬ </span>
         <button class="copy-button" onclick="copyText('ᶜᵒᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Dirigente Residente ⌬ </span>
+        <span>⁰⁴├⌯Dirigente Residente ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵈʳᵘˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Professor Geral ⌬ </span>
+        <span>⁰⁵├⌯Professor Geral ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵖᵍᵏʳᵘˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Professor tk ⌬ </span>
+        <span>⁰⁶├⌯Professor tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵖᵍᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 𝗀𝖾𝗋𝖺𝗅 ⌬ </span>
+        <span>⁰⁷├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 𝗀𝖾𝗋𝖺𝗅 ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Divulgador ⌬ </span>
+        <span>⁰⁸├⌯Divulgador ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵈᵛˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ </span>
+        <span>⁰⁹├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇᵈᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ </span>
+        <span>¹⁰├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇʳᵘˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ </span>
+        <span>¹¹├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ </span>
+        <span>¹²├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬</span>
+        <span>¹³├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬</span>
         <button class="copy-button" onclick="copyText('ᵐᵈᶠᶻᵈˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Tesoureiro ⌬</span>
+        <span>¹⁴├⌯Tesoureiro ⌬</span>
         <button class="copy-button" onclick="copyText('ᵗˢᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>├⌯Senador ⌬ </span>
+        <span>¹⁵├⌯Senador ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢⁿᵘʳˢ')">Copiar</button>
     </div>
 </div>
