--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <button class="copy-button" onclick="copyText('ᶜᵃᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹²├▢Animador ❍</span>
+        <span>¹¹├▢Animador ❍</span>
         <button class="copy-button" onclick="copyText('ᵃⁿⁱᵐᵘʳˢ')">Copiar</button>
     </div>
 </div>
@@ -454,7 +454,7 @@
         <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2>Licença <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Asilo <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
         <span>⁰¹├✙ Atestado ⌔ </span>
@@ -492,7 +492,7 @@
 <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Infração <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
         <span>⁰¹├⍟ Habeas corpus ⌲ </span>
