--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
-    <div class="copy-group">
-        <span>⁰¹├▩ Primeiro Ministro ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵘʳˢ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>⁰¹├▩ Primeiro Ministro ꗃ </span>
+    <i class="fa fa-user" style="color: pink;"></i>
+    <span style="margin-left: 5px;">Rany</span>
+    <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵘʳˢ')">Copiar</button>
+</div>
     <div class="copy-group">
         <span>⁰²├▩ Chanceler skur ꗃ </span>
         <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
