--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
     <div class="house-title">
         <i class="fas fa-home"></i>
         <h2> Kremnlin <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
-    </div><div class="copy-group">
+    </div>
+<div class="copy-group">
     <span>⁰¹├▩ Primeiro Ministro ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵘʳˢ')">Copiar</button>
     <i class="fa fa-user" style="color: pink; margin-left: 5px;"></i>
