--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@
     <i class="fa fa-user" style="color: pink; margin-left: 5px;"></i>
     <span style="margin-left: 5px;">Rany</span>
 </div>
-    <div class="copy-group">
-        <span>⁰²├▩ Chanceler skur ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>⁰²├▩ Chanceler  ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
+    <i class="fa fa-user" style="color: yellow; margin-left: 5px;"></i>
+    <span style="margin-left: 5px;">WD</span>
+</div>
     <div class="copy-group">
         <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
