--- a/index.html
+++ b/index.html
@@ -391,67 +391,67 @@
         <button class="copy-button" onclick="copyText('ᵃᵛˡᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁰├◈ 𝘎𝘦𝘳𝘦𝘯𝘵𝘦 𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <span>¹²├◈ 𝘎𝘦𝘳𝘦𝘯𝘵𝘦 𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
         <button class="copy-button" onclick="copyText('ᵍʳᵃⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹²├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <span>¹³├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃⁿˡˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²¹├◈ 𝘐𝘯𝘥𝘪𝘤𝘢𝘥𝘰𝘳 ▣</span>
+        <span>¹⁴├◈ 𝘐𝘯𝘥𝘪𝘤𝘢𝘥𝘰𝘳 ▣</span>
         <button class="copy-button" onclick="copyText('ⁱⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²²├◈ Adm Estadual ▣</span>
+        <span>¹⁵├◈ Adm Estadual ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐᵉˢᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²³├◈ 𝘗𝘰𝘭𝘪𝘤𝘪𝘢𝘭 ▣</span>
+        <span>¹⁶├◈ 𝘗𝘰𝘭𝘪𝘤𝘪𝘢𝘭 ▣</span>
         <button class="copy-button" onclick="copyText('ᵖˡˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁴├◈ 𝘙𝘦𝘤𝘪𝘱𝘤𝘪𝘰𝘯𝘪𝘴𝘵𝘢 ▣</span>
+        <span>¹⁷├◈ 𝘙𝘦𝘤𝘪𝘱𝘤𝘪𝘰𝘯𝘪𝘴𝘵𝘢 ▣</span>
         <button class="copy-button" onclick="copyText('ʳᵉᶜⁱᵖ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁵├◈ Adm Federal ▣</span>
+        <span>¹⁸├◈ Adm Federal ▣</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳⁿᵉᵉˣᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁶├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
+        <span>¹⁹├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃⁿˡˢᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁷├◈ 𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ▣</span>
+        <span>²⁰├◈ 𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ▣</span>
         <button class="copy-button" onclick="copyText('ˢᵍ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁸├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
+        <span>²¹├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁹├◈ ADM Residente ▣</span>
+        <span>²²├◈ ADM Residente ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>³⁰├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
+        <span>²³├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐⁱⁿᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>³¹├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
+        <span>²⁴├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐᵏᵃᵖʳᵉⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>³²├◈ Iniciante ▣</span>
+        <span>²⁵├◈ Iniciante ▣</span>
         <button class="copy-button" onclick="copyText('ⁱⁿᶜⁱ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>³³├◈ 𝘈𝘭𝘶𝘯𝘰 ▣</span>
+        <span>²⁶├◈ 𝘈𝘭𝘶𝘯𝘰 ▣</span>
 <button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
     </div>
         <div class="copy-group">
-        <span>³⁴├◈ Teste ▣</span>
+        <span>├◈ Teste ▣</span>
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
