--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 <button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
     </div>
         <div class="copy-group">
-        <span>├◈ Teste ▣</span>
+        <span>²⁷├◈ Teste ▣</span>
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
