--- a/index.html
+++ b/index.html
@@ -422,28 +422,25 @@
         <span>¹⁹├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃⁿˡˢᵗ')">Copiar</button>
     </div>
+    
     <div class="copy-group">
-        <span>²⁰├◈ 𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ▣</span>
-        <button class="copy-button" onclick="copyText('ˢᵍ')">Copiar</button>
-    </div>
-    <div class="copy-group">
-        <span>²¹├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
+        <span>²⁰├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
         <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²²├◈ ADM Residente ▣</span>
+        <span>²¹├◈ ADM Residente ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²³├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
+        <span>²²├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐⁱⁿᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁴├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
+        <span>²³├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
         <button class="copy-button" onclick="copyText('ᵃᵈᵐᵏᵃᵖʳᵉⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>²⁵├◈ Iniciante ▣</span>
+        <span>²⁴├◈ Iniciante ▣</span>
         <button class="copy-button" onclick="copyText('ⁱⁿᶜⁱ')">Copiar</button>
     </div>
     <div class="copy-group">
@@ -451,7 +448,7 @@
 <button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
     </div>
         <div class="copy-group">
-        <span>²⁷├◈ Teste ▣</span>
+        <span>²⁵├◈ Teste ▣</span>
 <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
     </div>
         </div>
