--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <button class="copy-button" onclick="copyText('ᵘᵖᵈʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁶├▢𝖲𝖾𝗀𝗎𝗋𝖺𝗇𝖼̧𝖺 ❍</span>
+        <span>⁰⁶├▢ Segurança ❍</span>
         <button class="copy-button" onclick="copyText('ˢᵍᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
