--- a/index.html
+++ b/index.html
@@ -217,6 +217,10 @@
         <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
+        <span>⁰⁷├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 Tk ⌬ </span>
+        <button class="copy-button" onclick="copyText('ˢᵖᵛˢᵏ')">Copiar</button>
+    </div>
+    <div class="copy-group">
         <span>⁰⁸├⌯Divulgador ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵈᵛˢᵏ')">Copiar</button>
     </div>
