--- a/index.html
+++ b/index.html
@@ -217,39 +217,39 @@
         <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁷├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 Tk ⌬ </span>
+        <span>⁰⁸⁷├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 Tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᵖᵛˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁸├⌯Divulgador ⌬ </span>
+        <span>⁰⁹├⌯Divulgador ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵈᵛˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁹├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ </span>
+        <span>¹⁰├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇᵈᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁰├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ </span>
+        <span>¹¹├⌯𝘌𝘮𝘣𝘢𝘪𝘻𝘢𝘥𝘰𝘳 tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ᵉᵐᵇʳᵘˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹¹├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ </span>
+        <span>¹²├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 𝘨𝘦𝘳𝘢𝘭 ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹²├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ </span>
+        <span>¹³├⌯𝘚𝘦𝘤𝘳𝘦𝘵𝘢𝘳𝘪𝘰 tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᶜᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹³├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬</span>
+        <span>¹⁴├⌯𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘧𝘢𝘻𝘦𝘯da ⌬</span>
         <button class="copy-button" onclick="copyText('ᵐᵈᶠᶻᵈˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁴├⌯Tesoureiro ⌬</span>
+        <span>¹⁵├⌯Tesoureiro ⌬</span>
         <button class="copy-button" onclick="copyText('ᵗˢᵘʳˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁵├⌯Senador ⌬ </span>
+        <span>¹⁶├⌯Senador ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢⁿᵘʳˢ')">Copiar</button>
     </div>
 </div>
