--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <button class="copy-button" onclick="copyText('ˢᵖᵛᶜᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>⁰⁸⁷├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 Tk ⌬ </span>
+        <span>⁰⁸├⌯𝘚𝘶𝘱𝘦𝘳𝘷𝘪𝘴𝘰𝘳 Tk ⌬ </span>
         <button class="copy-button" onclick="copyText('ˢᵖᵛˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
