--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </span>
     </div>
     <div class="footer">
-        <p style="text-align: center; margin-top: 20px;">© neext Ltda</p>
+        <p style="text-align: center; margin-top: 20px;">© NEEXT LTDA.</p>
     </div>
 </div>
 
