--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="profile-circle">
     <img src="perfil.jpg" alt="Perfil" class="profile-image" />
 </div>
-        <div>            <h2> Apostila <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <div>            <h2> Apostila <i class="fas fa-check-circle" style="color: #FFFF00;"></i></h2>
             <p>@neextstickers</p>
         </div>
     </div>  
