--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 <div class="copy-group">
     <span>⁰¹├▩ Primeiro Ministro ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵘʳˢ')">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᵖʳᵉᵐⁱᵉˢᵏ')">Copiar</button>
     <i class="fa fa-user" style="color: pink; margin-left: 5px;"></i>
     <span style="margin-left: 5px;">Rany</span>
 </div>
