--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
     <div class="profile-info">
 <div class="profile-circle">
     <img src="perfil.jpg" alt="Perfil" class="profile-image" />
+</div><div>
+  <h2>
+    Apostila 
+    <i class="fas fa-check-circle" style="color: #FFFF00;"></i>
+    <span class="pulsing-text">N</span>
+  </h2>
+  <p>@neextstickers</p>
 </div>
-        <div>            <h2> Apostila <i class="fas fa-check-circle" style="color: #FFFF00;"></i></h2>
-            <p>@neextstickers</p>
-        </div>
     </div>  
     <div class="tweets">
         <div class="tweet">
