--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <i class="fas fa-check-circle" style="color: #FFFF00;"></i>
     <span class="pulsing-text">N</span>
   </h2>
-  <p>@neextstickers</p>
+  <p id="neext-sticker">@neextstickers</p>
+  <p id="greeting"></p> <!-- Aqui será exibida a saudação -->
 </div>
     </div>  
     <div class="tweets">
