--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
     <div class="profile-info">
 <div class="profile-circle">
     <img src="perfil.jpg" alt="Perfil" class="profile-image" />
-</div><div>
-  <h2>
+</div><div><h2>
     Apostila 
     <i class="fas fa-check-circle" style="color: #FFFF00;"></i>
     <span class="pulsing-text">N</span>
   </h2>
   <p id="neext-sticker">@neextstickers</p>
-  <p id="greeting"></p> <!-- Aqui será exibida a saudação -->
+  <p id="greeting"></p> <!-- Onde a saudação será exibida -->
 </div>
     </div>  
     <div class="tweets">
