--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2> Capital Real <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Capital Real <i class="fas fa-store-alt" style="color: #1da1f2;"></i></h2>
     </div>
 
     <div class="copy-group">
