--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <div class="house-section">
     <div class="house-title">
         <i class="fas fa-home"></i>
-        <h2> Capital Regional <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
+        <h2> Capital Regional <i class="fas fa-monument" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
         <span> ⁰¹├⑆ Deputado ⎔</span>
