--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         </div>
         <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-home"></i>
+        <i class="fas fa-hospital"></i>
         <h2> Asilo <i class="fas fa-hospital
 " style="color: #1da1f2;"></i></h2>
     </div>
