--- a/index.html
+++ b/index.html
@@ -463,8 +463,7 @@
         <div class="house-section">
     <div class="house-title">
         <i class="fas fa-hospital"></i>
-        <h2> Asilo <i class="fas fa-hospital
-" style="color: #1da1f2;"></i></h2>
+        <h2> Asilo <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
         <span>⁰¹├✙ Atestado ⌔ </span>
