--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
         <!-- Seção Casa Branca -->
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-home"></i>
-        <h2> Capital Real <i class="fas fa-store-alt" style="color: #1da1f2;"></i></h2>
+        <i class="fas fa-store-alt"></i>
+        <h2> Capital Real <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
 
     <div class="copy-group">
@@ -308,7 +308,7 @@
 
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-home"></i>
+        <i class="fas fa-dome"></i>
         <h2> Distrito federal <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
