--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-dome"></i>
+        <i class="fas fa-stairs"></i>
         <h2> Distrito federal <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
