--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 </div>
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-home"></i>
+        <i class="fas fa-clinic-medical"></i>
         <h2> Infração <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
