--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 </div>
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-home"></i>
+        <i class="fas fa-city"></i>
         <h2>MUNICÍPIO KRVOW <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
     <div class="copy-group">
