--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <!-- Seção Casa Branca -->
 <div class="house-section">
     <div class="house-title">
-        <i class="fas fa-store-alt"></i>
+        <i class="fas fa-building"></i>
         <h2> Capital Real <i class="fas fa-check-circle" style="color: #1da1f2;"></i></h2>
     </div>
 
