--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <i class="fas fa-battery-full"></i> Nível de Bateria: <span id="batteryValue"></span>%
         </div>
         <div class="info-item" id="locationDisplay">
-            <i class="fas fa-map-marker-alt"></i> Estado: <span id="locationValue"></span>
+            <i class="fas fa-map-marker-alt"></i> Estado: <span id="location"></span>
         </div>
     </div>
     <div class="profile-info">
