--- a/index.html
+++ b/index.html
@@ -61,7 +61,28 @@
             <p><i class="fas fa-tools"></i> versão 29.01.589.</p>
         </div>
     </div>
-
+    <!-- Seções de troféu -->
+<div class="house-section" style="background-color: #6a0dad; padding: 20px; border-radius: 10px;">
+    <div class="house-title">
+        <i class="fa-solid fa-trophy"></i> <!-- Ícone de troféu -->
+        <h2>Top Ranking <i class="fas fa-check-circle" style="color: gold;"></i></h2>
+    </div>
+    <div class="copy-group">
+        <span>⁰¹├ Adm ◌ </span>
+        <span style="color: yellow; margin-left: 10px;">
+            <i style="color: gold; margin-left: 5px;">1</i> <!-- Número 1 -->
+        </span>
+    </div>
+    <div class="copy-group">
+        <span>⁰²├ Adm2 ◌ </span>
+        <span style="color: pink; margin-left: 10px;">
+            <i style="color: gold; margin-left: 5px;">2</i> <!-- Número 2 -->
+        </span>
+    </div>
+    <div class="footer">
+        <p style="text-align: center; margin-top: 20px; color: white;">© NEEXT LTDA.</p>
+    </div>
+</div>
     
     
 
