--- a/index.html
+++ b/index.html
@@ -133,9 +133,11 @@
     <span style="margin-left: 5px;">WD</span>
 </div>
     <div class="copy-group">
-        <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
-    </div>
+    <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
+    <i class="fas fa-user" style="color: pink;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px;">Steh</span> <!-- Texto "Steh" rosa -->
+    <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
+</div>
     <div class="copy-group">
         <span>⁰⁴├▩ 𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
         <button class="copy-button" onclick="copyText('ᶜˢᵏˢ')">Copiar</button>
