--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
     <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
     <i class="fa fa-user" style="color: yellow; margin-left: 5px;"></i>
     <span style="margin-left: 5px;">WD</span>
-</div>
-    <div class="copy-group">
+</div><div class="copy-group">
     <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
-    <i class="fas fa-user" style="color: pink;"></i> <!-- Ícone do boneco rosa -->
-    <span style="color: pink; margin-left: 5px;">Steh</span> <!-- Texto "Steh" rosa -->
     <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
+    <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px;">Steh</span> <!-- Texto "Steh" rosa -->
 </div>
     <div class="copy-group">
         <span>⁰⁴├▩ 𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
