--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
         <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-        <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
-    </div>
+    <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 mih ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
+    <i class="fas fa-hospital" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do hospital -->
+</div>
     <div class="copy-group">
         <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢ᵗᵏ ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢᵏ')">Copiar</button>
