--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@
         <span>⁰⁴├▩ 𝘊𝘰𝘯𝘴𝘦𝘭𝘩𝘦𝘪𝘳𝘰 ꗃ </span>
         <button class="copy-button" onclick="copyText('ᶜˢᵏˢ')">Copiar</button>
     </div>
-    <div class="copy-group">
-        <span>⁰⁵├▩ Diretor da Abin ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁱⁿ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>⁰⁵├▩ Diretor da Abin ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁱⁿ')">Copiar</button>
+    <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px;">Angel</span> <!-- Texto "Angel" rosa -->
+</div>
     <div class="copy-group">
         <span>⁰⁶├▩ Ceo Regente ꗃ </span>
         <button class="copy-button" onclick="copyText('ᶜᵗᶠ')">Copiar</button>
@@ -194,10 +196,9 @@
         <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
     </div>
     <div class="copy-group">
-    <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 mih ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
-    <i class="fas fa-hospital" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do hospital -->
-</div>
+        <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
+    </div>
     <div class="copy-group">
         <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢ᵗᵏ ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢᵏ')">Copiar</button>
