--- a/index.html
+++ b/index.html
@@ -175,10 +175,12 @@
         <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
     </div>
-    <div class="copy-group">
-        <span>¹³├▩ Ministro da Justiça ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>¹³├▩ Ministro da Justiça ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
+    <i class="fas fa-user" style="color: yellow; margin-left: 5px;"></i> <!-- Ícone do boneco amarelo -->
+    <span style="color: white; margin-left: 5px;">Lucas</span> <!-- Texto "Lucas" branco -->
+</div>
     <div class="copy-group">
         <span>¹⁴├▩ Ministro das relações ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')">Copiar</button>
