--- a/index.html
+++ b/index.html
@@ -171,10 +171,11 @@
         <span>¹¹├▩ Delegado ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵈˡᵍ')">Copiar</button>
     </div>
-    <div class="copy-group">
-        <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
+    <span style="margin-left: 5px;">mih</span> <!-- Texto "mih" -->
+</div>
 <div class="copy-group">
     <span>¹³├▩ Ministro da Justiça ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
