--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
     <div class="copy-group">
         <span>¹¹├▩ Delegado ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵈˡᵍ')">Copiar</button>
-    </div>
-<div class="copy-group">
+    </div><div class="copy-group">
     <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
-    <span style="margin-left: 5px;">mih</span> <!-- Texto "mih" -->
+    <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px;">mih</span> <!-- Texto "mih" rosa -->
 </div>
 <div class="copy-group">
     <span>¹³├▩ Ministro da Justiça ꗃ </span>
