--- a/index.html
+++ b/index.html
@@ -188,10 +188,12 @@
     <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px;">Gika</span> <!-- Texto "Gika" rosa -->
 </div>
-    <div class="copy-group">
-        <span>¹⁵├▩ Ministro de inteligência ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>¹⁵├▩ Ministro de inteligência ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')">Copiar</button>
+    <i class="fas fa-user" style="color: yellow; margin-left: 5px;"></i> <!-- Ícone do boneco amarelo -->
+    <span style="color: white; margin-left: 5px;">Mota</span> <!-- Texto "Mota" branco -->
+</div>
     <div class="copy-group">
         <span>¹⁶├▩ Ministro do Interior ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵐⁱⁿᵗˢ')">Copiar</button>
