--- a/index.html
+++ b/index.html
@@ -195,9 +195,11 @@
     <span style="color: white; margin-left: 5px;">Mota</span> <!-- Texto "Mota" branco -->
 </div>
     <div class="copy-group">
-        <span>¹⁶├▩ Ministro do Interior ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁱⁿᵗˢ')">Copiar</button>
-    </div>
+    <span>¹⁶├▩ Ministro do Interior ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁱⁿᵗˢ')">Copiar</button>
+    <i class="fas fa-user" style="color: yellow; margin-left: 5px;"></i> <!-- Ícone do boneco amarelo -->
+    <span style="color: white; margin-left: 5px;">ucold</span> <!-- Texto "ucold" branco -->
+</div>
     <div class="copy-group">
         <span>¹⁷├▩ Perfilador Geral ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
