--- a/index.html
+++ b/index.html
@@ -204,10 +204,13 @@
         <span>¹⁷├▩ Perfilador Geral ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
     </div>
-    <div class="copy-group">
-        <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
-    </div>
+<div class="copy-group">
+    <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
+    <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px;">mih</span> <!-- Texto "mih" rosa -->
+    <i class="fas fa-hospital" style="color: white; margin-left: 5px;"></i> <!-- Ícone do hospital -->
+</div>
     <div class="copy-group">
         <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢ᵗᵏ ꗃ </span>
         <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢᵏ')">Copiar</button>
