--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
     <span style="color: white; margin-left: 5px;">Lucas</span> <!-- Texto "Lucas" branco -->
 </div>
 <div class="copy-group">
-    <span>¹⁴├▩ Ministro das relações ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')">Copiar</button>
-    <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
-    <span style="color: pink; margin-left: 5px;">Gika</span> <!-- Texto "Gika" rosa -->
+    <span style="font-size: 14px;">¹⁴├▩ Ministro das relações ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 12px; padding: 5px 10px;">Copiar</button>
+    <i class="fas fa-user" style="color: pink; margin-left: 5px; font-size: 14px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px; font-size: 14px;">Gika</span> <!-- Texto "Gika" rosa -->
 </div>
 <div class="copy-group">
     <span>¹⁵├▩ Ministro de inteligência ꗃ </span>
