--- a/index.html
+++ b/index.html
@@ -186,10 +186,9 @@
     <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 14px; padding: 6px 12px;">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px; font-size: 16px;">Gika</span> <!-- Texto "Gika" rosa -->
-</div>
-<div class="copy-group">
+</div><div class="copy-group" style="display: flex; align-items: center;">
     <span style="font-size: 16px;">¹⁵├▩ Ministro de inteligência ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')" style="font-size: 14px; padding: 6px 12px;">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')" style="font-size: 14px; padding: 6px 12px; margin-left: 5px;">Copiar</button>
     <i class="fas fa-user" style="color: yellow; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco amarelo -->
     <span style="color: white; margin-left: 5px; font-size: 16px;">Mota</span> <!-- Texto "Mota" branco -->
 </div>
