--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
     <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
     <i class="fas fa-user" style="color: yellow; margin-left: 5px;"></i> <!-- Ícone do boneco amarelo -->
     <span style="color: white; margin-left: 5px;">Lucas</span> <!-- Texto "Lucas" branco -->
-</div><div class="copy-group">
+</div>
+<div class="copy-group">
     <span style="font-size: 16px;">¹⁴├▩ Ministro das relações ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 14px; padding: 6px 12px;">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco rosa -->
