--- a/index.html
+++ b/index.html
@@ -187,13 +187,13 @@
     <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 14px; padding: 6px 12px;">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px; font-size: 16px;">Gika</span> <!-- Texto "Gika" rosa -->
+</div><div class="copy-group" style="display: flex; align-items: center; flex-wrap: nowrap;">
+    <span style="font-size: 14px;">¹⁵├▩ Ministro de inteligência ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')" style="font-size: 12px; padding: 4px 8px; margin-left: 10px;">Copiar</button>
+    <i class="fas fa-user" style="color: yellow; margin-left: 10px; font-size: 14px;"></i> <!-- Ícone do boneco amarelo -->
+    <span style="color: white; margin-left: 5px; font-size: 14px;">Mota</span> <!-- Texto "Mota" branco -->
 </div>
-<div class="copy-group" style="display: flex; align-items: center;">
-    <span style="font-size: 16px;">¹⁵├▩ Ministro de inteligência ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')" style="font-size: 14px; padding: 6px 12px; margin-left: 5px;">Copiar</button>
-    <i class="fas fa-user" style="color: yellow; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco amarelo -->
-    <span style="color: white; margin-left: 5px; font-size: 16px;">Mota</span> <!-- Texto "Mota" branco -->
-</div>
+
     <div class="copy-group">
     <span>¹⁶├▩ Ministro do Interior ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐⁱⁿᵗˢ')">Copiar</button>
