--- a/index.html
+++ b/index.html
@@ -181,13 +181,14 @@
     <button class="copy-button" onclick="copyText('ᵐⁿˢᵗⁿ')">Copiar</button>
     <i class="fas fa-user" style="color: yellow; margin-left: 5px;"></i> <!-- Ícone do boneco amarelo -->
     <span style="color: white; margin-left: 5px;">Lucas</span> <!-- Texto "Lucas" branco -->
-</div>
-<div class="copy-group">
-    <span style="font-size: 16px;">¹⁴├▩ Ministro das relações ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 14px; padding: 6px 12px;">Copiar</button>
-    <i class="fas fa-user" style="color: pink; margin-left: 5px; font-size: 16px;"></i> <!-- Ícone do boneco rosa -->
-    <span style="color: pink; margin-left: 5px; font-size: 16px;">Gika</span> <!-- Texto "Gika" rosa -->
 </div><div class="copy-group" style="display: flex; align-items: center; flex-wrap: nowrap;">
+    <span style="font-size: 14px;">¹⁴├▩ Ministro das relações ꗃ </span>
+    <button class="copy-button" onclick="copyText('ᵐⁿʳˡ')" style="font-size: 12px; padding: 4px 8px; margin-left: 10px;">Copiar</button>
+    <i class="fas fa-user" style="color: pink; margin-left: 10px; font-size: 14px;"></i> <!-- Ícone do boneco rosa -->
+    <span style="color: pink; margin-left: 5px; font-size: 14px;">Gika</span> <!-- Texto "Gika" rosa -->
+</div>
+
+<div class="copy-group" style="display: flex; align-items: center; flex-wrap: nowrap;">
     <span style="font-size: 14px;">¹⁵├▩ Ministro de inteligência ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐⁿˢᶜᵖ')" style="font-size: 12px; padding: 4px 8px; margin-left: 10px;">Copiar</button>
     <i class="fas fa-user" style="color: yellow; margin-left: 10px; font-size: 14px;"></i> <!-- Ícone do boneco amarelo -->
