--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </div>
     <div class="copy-group">
         <span>⁰¹├🎖️Diretor ◌ </span>
-        <button class="copy-button" onclick="copyText('ᵈʳᵗˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶜᶜᵖ')">Copiar</button>
         <span style="color: yellow; margin-left: 10px;">
             <i class="fas fa-male"></i> Sam 
             <i class="fas fa-medal" style="color: gold; margin-left: 5px;"></i>
@@ -128,12 +128,12 @@
 </div>
 <div class="copy-group">
     <span>⁰²├▩ Chanceler  ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᶜʰˢᵏ')">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᶜʰˢ')">Copiar</button>
     <i class="fa fa-user" style="color: yellow; margin-left: 5px;"></i>
     <span style="margin-left: 5px;">WD</span>
 </div><div class="copy-group">
     <span>⁰³├▩ 𝘗𝘳𝘰𝘤𝘶𝘳𝘢𝘥𝘰𝘳 Geral ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵖᵍˢᵏ')">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᵖᶜˢ')">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px;">Steh</span> <!-- Texto "Steh" rosa -->
 </div>
@@ -143,21 +143,21 @@
     </div>
 <div class="copy-group">
     <span>⁰⁵├▩ Diretor da Abin ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵈʳᵃᵇⁱⁿ')">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᵈʳᵇⁿˢ')">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px;">Angel</span> <!-- Texto "Angel" rosa -->
 </div>
     <div class="copy-group">
         <span>⁰⁶├▩ Ceo Regente ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᶜᵗᶠ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶜᵗˢ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁷├▩ Arquiteto ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵃʳᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵃʳᵠᵗˢ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁸├▩ Ministro Da Economia ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵐⁿˢᵉᶜ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵐⁿᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁹├▩ Tesoureiro ꗃ </span>
@@ -165,11 +165,12 @@
     </div>
     <div class="copy-group">
         <span>¹⁰├▩ Juiz Inspetor ꗃ </span>
-        <button class="copy-button" onclick="copyText('ˣⁿˣ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ˢᵗˢ
+')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹¹├▩ Delegado ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵈˡᵍ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵈˡᵍᵈᵒ')">Copiar</button>
     </div><div class="copy-group">
     <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
@@ -203,18 +204,18 @@
 </div>
     <div class="copy-group">
         <span>¹⁷├▩ Perfilador Geral ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖᶠᵍˡˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵖᵍˢ')">Copiar</button>
     </div>
 <div class="copy-group">
     <span>¹⁸├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 ꗃ </span>
-    <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢ')">Copiar</button>
+    <button class="copy-button" onclick="copyText('ᵖˢᵍˢ')">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
     <span style="color: pink; margin-left: 5px;">mih</span> <!-- Texto "mih" rosa -->
     <i class="fas fa-hospital" style="color: white; margin-left: 5px;"></i> <!-- Ícone do hospital -->
 </div>
     <div class="copy-group">
-        <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢ᵗᵏ ꗃ </span>
-        <button class="copy-button" onclick="copyText('ᵖˢᵘʳˢᵏ')">Copiar</button>
+        <span>¹⁹├▩ 𝘗𝘴𝘪𝘤𝘰𝘭𝘰𝘨𝘢 Tk ꗃ </span>
+        <button class="copy-button" onclick="copyText('ᵖˢᵗᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²⁰├▩ Guardião ♖ ꗃ </span>
